# autonomous_carla

./: .gitignore  README.md
docs/: compile_carla_ros_bridge.md  config_carla.md  gcc_cuda.md  gcc_ros_link_issue.md  pythonapi.md
learn/: Euler.md  awesome_pointcloud_detection_papers.md  cmakelist.md  dirs_py.md  disparity.md  eigen_in_autoware.md  intro2data_association.md  kalmanfilter.md  matrix_derivatives.md  numpy_broadcasting.md  passbyval_vs_ref.md  prob_robotics.md  ros_NodeHandle.md  ros_OccupancyGrid.md  ros_parameter_server.md  stack_vs_heap_memory_allocation.md  tips.md  unix_tutorial.md  vector_matrix.md
ros/devel/: .catkin  .rosinstall  setup.sh
ros/devel/lib/pkgconfig/: detection.pc  localization.pc  segmentation.pc
ros/devel/share/detection/cmake/: detectionConfig.cmake
ros/devel/share/localization/cmake/: localizationConfig.cmake
ros/devel/share/segmentation/cmake/: segmentationConfig.cmake
ros/src/: carla_ros_bridge
ros/src/carla_ros_bridge/: CMakeLists.txt
ros/src/demos/path_following/: CMakeLists.txt  README.md  package.xml
ros/src/demos/path_following/src/: agent_pointcloud.py  get_pointcloud_bag.py
ros/src/localization/: CMakeLists.txt  package.xml
ros/src/localization/ndt_mapping/: CMakeLists.txt  package.xml
ros/src/localization/ndt_mapping/config/: config.yaml
ros/src/localization/ndt_mapping/launch/: ndt_mapping.launch
ros/src/localization/ndt_mapping/src/: LidarMapping.cpp  LidarMapping.h  NDTMapping.cpp  NDTMapping.h  ndt_mapping_node.cpp
ros/src/localization/ndt_mapping_with_imu/: CMakeLists.txt  package.xml
ros/src/localization/ndt_mapping_with_imu/src/: NDTMapping.cpp  NDTMapping.h  ndt_mapping_node.cpp
ros/src/localization/ndt_matching/: CMakeLists.txt  package.xml
ros/src/perception/detection/: CMakeLists.txt
ros/src/perception/segmentation/: CMakeLists.txt  package.xml
